<resources>
    <string name="app_name">Zephyrr</string>
    <string name="tmdb_url">https://api.themoviedb.org/3/</string>
    <string name="tmdb_popular_url">popular</string>
    <string name="api_key">api_key</string>
    <string name="about_me">\u00a9 %1$s Samuel Greenberg</string>
    <string name="matt_credit">Thanks to Matthew McKenna for the inspiration to actually do this!</string>
    <string name="version_number">Version: %1$s</string>
    <string name="tmdb_text">This product uses the TMDb API but is not endorsed or certified by TMDb.</string>
    <string name="privacy_policy_title">Privacy Policy</string>
    <string name="privacy_policy_url">
        https://probablybatman.github.io/Zephyrr/policies/zephyrr_privacy_policy.html
    </string>
    <string name="terms_and_conditions_title">Terms and Conditions</string>
    <string name="terms_and_conditions_url">
        https://probablybatman.github.io/Zephyrr/policies/zephyrr_terms_and_conditions.html
    </string>
    <string name="ang_ux">Thanks to Ang Li for help with the UX/UI!</string>
    <string name="duane_title">Zephyrr icon design courtesy of Duane:</string>
    <string name="duane_link">https://amko-design.squarespace.com</string>

    <string name="generic_loading_text">Loading more results…</string>
    <string name="generic_error_text">An error has occurred.</string>
    <string name="landing_row_error_retry">Tap to retry.</string>
    <string name="dismiss">DISMISS</string>
    <string name="retry">RETRY</string>
    <string name="about_menu_item">About</string>

    <!-- Detail Layout -->
    <string name="release_date_title">Release Date</string>
    <string name="user_rating_title">User Rating</string>
    <string name="status_title">Status</string>
    <string name="runtime_title">Runtime</string>
    <plurals name="genres_title">
        <item quantity="one">Genre</item>
        <item quantity="other">Genres</item>
    </plurals>
    <string name="born_title">Born</string>
    <string name="died_title">Died</string>
    <string name="birthplace_title">Birthplace</string>
    <plurals name="day_and_age_substitution">
        <item quantity="one">%1$s (%2$d year old)</item>
        <item quantity="other">%1$s (%2$d years old)</item>
    </plurals>
    <string name="birthday_no_age_substitution">%1$s</string>
    <plurals name="user_rating_substitution">
        <item quantity="one">%1$s by %2$d user</item>
        <item quantity="other">%1$s by %2$d users</item>
    </plurals>
    <string name="runtime_substitution">%1$s minutes</string>
    <string name="poster_url_substitution">https://image.tmdb.org/t/p/original%1$s</string>
    <string name="toggle_dark_mode_text">Toggle Dark Mode</string>
    <string name="cast_title">Cast</string>
    <string name="crew_title">Crew</string>
    <string name="production_title">Production</string>
    <string name="director_title">Director</string>
    <string name="production_companies_title">Production Companies</string>
    <string name="filming_locations_title">Filming Locations</string>
    <string name="budget_title">Budget</string>
    <string name="budget_substitution">$%1$s</string>
    <string name="performance_title">Performance</string>
    <string name="revenue_title">Revenue</string>
    <string name="poster_title">Posters</string>
    <string name="overview_title">Overview</string>

    <!-- Search -->
    <string name="search">Search</string>
    <string name="combined_search">Combined Search</string>
    <string name="search_hint">Search for actors and movies here…</string>
    <string name="generic_max_pages_text">No more results available.</string>
    <string name="empty_state_search_text">No results found for %1$s.</string>
    <string name="search_query_display_text">Results for: %1$s</string>
    <string name="multi_search_add">Add</string>
    <string name="multi_search_hint">Add actors to see if they have any TV show or movie overlap!</string>

    <!-- Tv Detail -->
    <string name="first_aired_title">First Aired</string>
    <string name="next_air_date_title">Next Air Date</string>
    <string name="last_aired_title">Last Aired</string>
    <string name="number_of_episodes_title">Episodes</string>
    <string name="seasons_title">Seasons</string>
    <string name="created_by_title">Created By</string>
    <plurals name="episode_runtime_title">
        <item quantity="one">Episode Runtime</item>
        <item quantity="other">Episode Runtimes</item>
    </plurals>
    <plurals name="networks_title">
        <item quantity="one">Network</item>
        <item quantity="other">Networks</item>
    </plurals>

    <!-- Image Gallery -->
    <string name="copy_image">Copy image URL to clipboard</string>
    <string name="copy_image_toast">Copied URL to clipboard!</string>
    <string name="copy_image_error_toast">Couldn\'t copy URL!</string>
    <string name="image_gallery_counter">%1$d/%2$d</string>
    <string name="image_downloaded">Image downloaded!</string>
    <string name="image_download">Save to gallery</string>
    <string name="image_gallery_error">Unable to retrieve images.</string>

    <!-- Landing Page -->
    <string name="recently_released_row">Recently Released</string>
    <string name="popular_row">Popular</string>
    <string name="soon_tm_row">Soonᵗᵐ</string>
    <string name="popular_tv_row">Popular TV</string>
    <string name="top_rated_tv_row">Top Rated</string>
    <string name="see_all_button">See All</string>

    <!-- Permission requests -->
    <string name="permission_request_title">Permissions Required</string>
    <string name="permission_request_description">We need that to allow you to download. Turn this on at
    any time by visiting the settings.</string>
</resources>
