<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/search_results_fragment"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/multi_search_menu_option"
        android:title="@string/combined_search"
        app:showAsAction="never"/>
    <item
        android:id="@+id/toggleDarkMode"
        android:title="@string/toggle_dark_mode_text"
        app:showAsAction="never"
        android:textColor="?android:attr/textColorPrimary"/>
    <item
        android:id="@+id/aboutFragment"
        android:title="@string/about_menu_item"
        app:showAsAction="never"/>
</menu>