<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_small">

    <TextView
            android:id="@+id/privacy_policy_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_medium"
            android:text="@string/privacy_policy_title"/>

    <TextView
            android:id="@+id/privacy_policy_link"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_small"
            android:text="@string/privacy_policy_url"
            app:layout_constraintTop_toBottomOf="@id/privacy_policy_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/terms_and_conditions_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_medium"
            android:text="@string/terms_and_conditions_title"
            app:layout_constraintTop_toBottomOf="@id/privacy_policy_link"/>
    <TextView
            android:id="@+id/terms_and_conditions_link"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_small"
            android:text="@string/terms_and_conditions_url"
            app:layout_constraintTop_toBottomOf="@id/terms_and_conditions_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/about_me_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintTop_toBottomOf="@id/terms_and_conditions_link"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
            android:layout_width="204dp"
            android:layout_height="80dp"
            android:layout_marginTop="@dimen/margin_small"
            android:src="@drawable/ic_tmdb_icon"
            app:layout_constraintTop_toBottomOf="@id/about_me_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

</android.support.constraint.ConstraintLayout>