<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background">

    <!-- TODO: figure out max length for edit text here? -->
    <EditText
        android:id="@+id/multi_search_input"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:maxLength="80"
        android:hint="@string/multi_search_hint"
        android:layout_marginHorizontal="@dimen/margin_tiny"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/multi_search_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_small"
        android:gravity="center"
        android:textSize="@dimen/text_size_small"
        android:text="@string/multi_search_add"
        android:textColor="@android:color/white"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/multi_search_input"
        app:layout_constraintTop_toTopOf="@id/multi_search_input"
        app:layout_constraintBottom_toBottomOf="@id/multi_search_input"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/multi_search_query_items"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_small"
        app:layout_constraintBottom_toTopOf="@+id/multi_search_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/multi_search_input" />

    <Button
        android:id="@+id/multi_search_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:gravity="center"
        android:textSize="@dimen/text_size_small"
        android:textColor="@android:color/white"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/multi_search_query_items"
        app:layout_constraintWidth_percent="0.75" />

</androidx.constraintlayout.widget.ConstraintLayout>