<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/person_detail_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="blocksDescendants">

        <ProgressBar
            android:id="@+id/person_detail_progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"/>

        <android.support.v7.widget.CardView
            android:id="@+id/person_poster_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardElevation="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/person_poster_image"
                android:layout_width="120dp"
                android:layout_height="180dp"/>

        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/person_detail_name"
            style="@style/TopInfoItemStyle"
            android:gravity="center"
            app:layout_constraintStart_toEndOf="@id/person_poster_container"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold"
            tools:text="Nikolaj Coster-Waldau"/>

        <TextView
            android:id="@+id/person_detail_birthday_title"
            style="@style/TopInfoTitleStyle"
            app:layout_constraintStart_toEndOf="@id/person_poster_container"
            app:layout_constraintEnd_toStartOf="@id/person_detail_birthday"
            app:layout_constraintTop_toBottomOf="@id/person_detail_name"
            android:text="@string/born_title"/>

        <TextView
            android:id="@+id/person_detail_birthday"
            style="@style/TopInfoItemStyle"
            app:layout_constraintStart_toEndOf="@id/person_detail_birthday_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/person_detail_name"/>

        <TextView
            android:id="@+id/person_detail_deathday_title"
            style="@style/TopInfoTitleStyle"
            app:layout_constraintStart_toEndOf="@id/person_poster_container"
            app:layout_constraintEnd_toStartOf="@id/person_detail_deathday"
            app:layout_constraintTop_toBottomOf="@id/person_detail_birthday"
            android:text="@string/died_title"/>

        <TextView
            android:id="@+id/person_detail_deathday"
            style="@style/TopInfoItemStyle"
            app:layout_constraintStart_toEndOf="@id/person_detail_deathday_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/person_detail_birthday"/>

        <TextView
            android:id="@+id/person_detail_birthplace_title"
            style="@style/TopInfoTitleStyle"
            app:layout_constraintTop_toBottomOf="@id/person_detail_deathday"
            app:layout_constraintStart_toEndOf="@id/person_poster_container"
            app:layout_constraintEnd_toStartOf="@id/person_detail_birthplace"
            android:text="@string/birthplace_title"/>

        <TextView
            android:id="@+id/person_detail_birthplace"
            style="@style/TopInfoItemStyle"
            app:layout_constraintTop_toBottomOf="@id/person_detail_deathday"
            app:layout_constraintStart_toEndOf="@id/person_detail_birthplace_title"
            app:layout_constraintEnd_toEndOf="parent"/>

        <android.support.constraint.Barrier
            android:id="@+id/tv_detail_barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="person_detail_birthplace, person_poster_container"/>

        <TextView
            android:id="@+id/person_detail_biography"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_medium"
            android:textSize="@dimen/text_size_small"
            android:lineSpacingMultiplier="1.25"
            app:layout_constraintTop_toBottomOf="@id/person_poster_container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/person_detail_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            app:layout_constraintTop_toBottomOf="@id/person_detail_biography"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>